almost all swagger
